# embayro

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
migrations/: 20230501111734_animelist.sql
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: anidb.rs  data.rs  lib.rs  main.rs  memdata.rs  nyaa.rs
src/lib/: com.ts
