[package]
name = "embayro"
version = "0.0.1"
description = "A Tauri App"
authors = ["aixeria"]
license = ""
repository = "https://github.com/pozm/embayro"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"] }
tokio = {version = "1.28.0", features = ["full"] }
parking_lot = "0.12.1"
anyhow = "1.0.70"
tantivy = {version = "*"}
reqwest = {version = "0.11.16", features = ["stream"] }
quick-xml = {version = "0.28.2",features= ["async-tokio"] }
scraper = "0.16.0"
tvmaze-api = {path="../../../../rust/tvmaze-api"}
tokio-stream = {version = "0.1.14"}
tokio-util = {version = "0.7.8"}
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls","sqlite","macros","chrono","migrate"] }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
